Adopt d-migrate Kotlin/Micronaut patterns in spike plan
Cross-checked the spike plan against the existing d-migrate Kotlin
codebase (/Development/d-migrate) and pulled in concrete patterns
that materially improve the Micronaut prototype without bloating
the spike scope.

Plan changes:
- §6.3 (AP-2): pin Kotlin 2.1.x, centralize versions in
  gradle.properties, switch test default to Kotest 6.x + MockK +
  @MicronautTest (was JUnit 5), pin Logback 1.5.x and detekt 1.23+.
- §7.2: add a JVM cold-start hint — measure both default JVM and
  production flags -XX:+UseZGC -XX:+ZGenerational (d-migrate Jib
  config), since ZGC materially affects the Cold-Start scoring
  category.
- §12.2: add gradle.properties to the tree and document its
  contents (kotlin/micronaut/kotest/mockk/logback/detekt versions
  plus org.gradle.parallel/caching/jvmargs).
- §14.9: refine detekt setup with concrete d-migrate patterns —
  buildUponDefaultConfig, tasks.named("check") dependsOn detekt,
  detekt before tests, html+xml+sarif reports (sarif feeds the
  GitHub Security tab), parallel/allRules/ignoreFailures defaults.
- §14.10 (new): document Kotest+MockK as default with rationale —
  Kotlin-idiomatic, no open-class workaround for mocks, consistency
  with the existing d-migrate stack.
- §14.11 (new): Soll-only 4-stage Dockerfile layout
  (deps -> compile -> build -> runtime) with a custom
  resolveAllDependencies Gradle task for the deps stage. Two-stage
  remains allowed; build-time measurement in §7.2 decides.
- §11: add MVP-only lessons-learned block — Kover for coverage,
  per-module detekt-baseline.xml during multi-module migration, CI
  artifact uploads for test/coverage/detekt reports,
  outputs.cacheIf { false } on test tasks.

Spec §12.3: align Tag 3-4 stack list with the new Kotlin/Kotest
defaults via cross-refs to plan §14.6, §14.9, §14.10.

Co-Authored-By: Claude Opus 4.7 (1M context) <noreply@anthropic.com>